Add: index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu Sliding</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <ul>
+        <div id="horizontal-underline" />
+        <li><a href="#chicken">치킨</a></li>
+        <li><a href="#pizza">피자</a></li>
+        <li><a href="#asian">아시안&bull;양식</a></li>
+        <li><a href="#chinese">중식</a></li>
+      </ul>
+    </nav>
+
+    <nav>
+      <ul>
+        <div id="vertical-underline" />
+        <li><a href="#menu">메뉴</a></li>
+        <li><a href="#sale">오늘의 할인</a></li>
+        <li><a href="#delivery">우리 동네 빠른 배달 🏡</a></li>
+        <li><a href="#list">배달 목록</a></li>
+      </ul>
+    </nav>
+
+    <script src="sliding.js"></script>
+  </body>
 </html>
