--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kok">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,6 +19,8 @@
       </ul>
     </nav>
 
+    <div class="divider"></div>
+
     <nav>
       <ul>
         <div id="vertical-underline"></div>
@@ -28,6 +30,10 @@
         <li><a href="#list">배달 목록</a></li>
       </ul>
     </nav>
+
+    <div class="divider"></div>
+
+    <h1 class="flex-row-center">Simple Menu Sliding!</h1>
 
     <script src="sliding.js"></script>
   </body>
