--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#menu">메뉴</a></li>
         <li><a href="#sale">오늘의 할인</a></li>
         <li><a href="#delivery">우리 동네 빠른 배달 🏡</a></li>
-        <li><a href="#list">배달 목록</a></li>
+        <li><a href="#jam">Jam</a></li>
       </ul>
     </nav>
 
